--- a/admin/assets/scss/components/_editor.scss
+++ b/admin/assets/scss/components/_editor.scss
@@ -64,8 +64,18 @@
     border-top-right-radius: 0;
 }
 
+.CodeMirror-cursor {
+    border-left-color: $color-base-100;
+}
+
+.CodeMirror-vscrollbar,
+.CodeMirror-hscrollbar,
+.CodeMirror-scrollbar-filler {
+    background-color: inherit;
+}
+
 .CodeMirror-selected {
-    background: $color-base-700;
+    background: transparent;
 }
 
 .CodeMirror-focused .CodeMirror-selected {
